--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
-  "name": "password-manager-test",
+  "name": "tauri-notepad",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^4.4.0",
     "@blueprintjs/popover2": "^1.3.0",
     "@tauri-apps/api": "^1.0.0-rc.6",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "tauri": "tauri"
   },
