--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.0.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0", features = ["dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "macos-private-api", "os-all", "window-center", "window-close", "window-maximize", "window-minimize", "window-set-resizable", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
+tauri = { version = "1.0.0", features = ["dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "macos-private-api", "os-all", "shell-open", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
 window-shadows = "0.1.3"
 
 [features]
