--- a/package.json
+++ b/package.json
@@ -1,25 +1,40 @@
 {
   "name": "tauri-notepad",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@blueprintjs/core": "^4.4.0",
+    "@blueprintjs/popover2": "^1.3.0",
+    "@tauri-apps/api": "^1.0.0-rc.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-scripts": "5.0.1"
+  },
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview",
+    "start": "cross-env BROWSER=none react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
     "tauri": "tauri"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "@tauri-apps/cli": "^1.0.0",
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.3",
-    "vite": "^2.9.9",
-    "vite-plugin-solid": "^2.2.6"
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
   },
-  "dependencies": {
-    "@tauri-apps/api": "^1.0.1",
-    "solid-js": "^1.4.2"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@tauri-apps/cli": "^1.0.0-rc.13",
+    "cross-env": "^7.0.3"
   }
 }
